<resources>
    <string name="app_name">insta</string>
    <string name="instagram">Instagram</string>
    <string name="login_to_continue">Login To Continue:</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? <b>Sign Up</b></string>
    <string name="src">src</string>
    <string name="login_in_with">Login In With</string>
    <string name="or">Or</string>
    <string name="web_client_id">433538863198-0ltedjvgclluhhsogbjfih9fvp9g2f3e.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="messages">Messages</string>
    <string name="requests">Requests</string>
    <string name="about_the_user_demo">About the user That Can be edited Or Added by the user with their wish.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_profile">Share Profile</string>
    <string name="_20">20</string>
    <string name="posts">Posts</string>
    <string name="_636">636</string>
    <string name="followers">Followers</string>
    <string name="_462">462</string>
    <string name="following">Following</string>
    <string name="follow">follow</string>
    <string name="followed">followed</string>
    <string name="suggestion">Suggestion</string>
    <string name="view_all">View All</string>
    <string name="requested">Requested</string>
    <string name="cnt">cnt</string>
    <string name="picture_location">Picture Location</string>
    <string name="all_files">All Files</string>
</resources>