<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboardPkg.bottomNavFragments.profilePkg.ProfileScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="2dp"
            android:contentDescription="@string/src"
            android:src="@drawable/lock_ic"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/profileUserNameView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="10"
            android:fontFamily="@font/ibm_plex_mono_semibold"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/settingsBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/src"
            android:src="@drawable/setting_ic"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshProfileView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/userProfilePic"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_weight="15"
                        android:contentDescription="@string/src" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="NestedWeights">

                            <TextView
                                android:id="@+id/postCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_semibold"
                                android:text="@string/_20"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_light"
                                android:text="@string/posts"
                                android:textSize="12sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followersCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_semibold"
                                android:text="@string/_636"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_light"
                                android:text="@string/followers"
                                android:textSize="12sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followingCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_semibold"
                                android:text="@string/_462"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ibm_plex_mono_light"
                                android:text="@string/following"
                                android:textSize="12sp" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:id="@+id/aboutTheUserView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/ibm_plex_mono_medium"
                        android:text="@string/about_the_user_demo"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/editProfileBtn"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="5"
                            android:backgroundTint="@color/instagramLightWhite"
                            android:fontFamily="@font/ibm_plex_mono_medium"
                            android:outlineProvider="none"
                            android:text="@string/edit_profile"
                            android:textAllCaps="false"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="14sp"
                            app:cornerRadius="6dp"
                            tools:targetApi="p" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/shareProfileBtn"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginStart="4dp"
                            android:layout_weight="5"
                            android:backgroundTint="@color/instagramLightWhite"
                            android:fontFamily="@font/ibm_plex_mono_medium"
                            android:outlineProvider="none"
                            android:text="@string/share_profile"
                            android:textAllCaps="false"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="14sp"
                            app:cornerRadius="6dp"
                            tools:targetApi="p" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/suggestionsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:fontFamily="@font/ibm_plex_mono_medium"
                            android:text="@string/suggestion" />

                        <TextView
                            android:id="@+id/viewAllSuggestionBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ibm_plex_mono_semibold"
                            android:gravity="end"
                            android:text="@string/view_all"
                            android:textColor="@color/instagramBlue" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listOfUsers"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@android:color/transparent"
                    app:tabRippleColor="?attr/colorOnSurface"
                    app:tabIndicatorColor="?attr/colorOnSurface"
                    app:tabIndicatorHeight="2dp"
                    app:tabIconTint="?attr/colorOnSurface"
                    app:tabInlineLabel="false"
                    android:id="@+id/userContentsTabs">

                    <!--<com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/post_ic" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/video_ic_filled" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/tag_ic" />
-->
                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userContentsView"/>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>