<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="200dp"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="180dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/userProfilePicView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/src"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_ic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/userNameView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="9"
                android:ellipsize="end"
                android:fontFamily="@font/ibm_plex_mono_bold"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/username"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/followBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/ibm_plex_mono_medium"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/followedBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/instagramLightWhite"
                android:fontFamily="@font/ibm_plex_mono_medium"
                android:outlineProvider="none"
                android:text="@string/followed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"
                app:cornerRadius="6dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>